# TONWallet

./: .gitignore  README.md
TONWallet/: SceneDelegate.swift
TONWallet.xcodeproj/: project.pbxproj
TONWallet.xcodeproj/xcshareddata/xcschemes/: TONWallet.xcscheme
TONWallet.xcworkspace/: contents.xcworkspacedata
TONWallet/Assets.xcassets/Animations/congratulations.dataset/: Contents.json
TONWallet/Assets.xcassets/Animations/created.dataset/: Contents.json
TONWallet/Assets.xcassets/Animations/loading.dataset/: Contents.json
TONWallet/Assets.xcassets/Animations/start.dataset/: Contents.json
TONWallet/Assets.xcassets/Animations/test_time.dataset/: Contents.json
TONWallet/Assets.xcassets/Icons/arrow_bottom_left.imageset/: Contents.json
TONWallet/Assets.xcassets/Icons/menu_arrow.imageset/: Contents.json
TONWallet/Assets.xcassets/Icons/ton.imageset/: Contents.json
TONWallet/Assets.xcassets/QR/qr_marker.imageset/: Contents.json
TonWallet/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
TonWallet.xcodeproj/: project.pbxproj
TonWallet.xcodeproj/xcshareddata/xcschemes/: TonWallet.xcscheme
TonWallet.xcodeproj/xcuserdata/vkiryukhin.xcuserdatad/xcschemes/: xcschememanagement.plist
TonWallet.xcworkspace/: contents.xcworkspacedata
TonWallet/Assets.xcassets/Animations/Main.dataset/: Contents.json
TonWallet/Assets.xcassets/Animations/Password.dataset/: Contents.json
TonWallet/Assets.xcassets/Animations/Success.dataset/: Contents.json
TonWallet/Assets.xcassets/Animations/recovery.dataset/: Contents.json
TonWallet/Assets.xcassets/Animations/too_bad.dataset/: Contents.json
TonWallet/Assets.xcassets/Animations/waiting_ton.dataset/: Contents.json
TonWallet/Assets.xcassets/Icons/flashlight.imageset/: Contents.json
TonWallet/Assets.xcassets/Icons/paste.imageset/: Contents.json
Tools/Frameworks/RLottie/templates/: Info.plist  module.modulemap
Tools/Frameworks/Tonlib/: build.sh  wallet_v4.patch
Tools/Frameworks/Tonlib/Templates/: module.modulemap
Tools/RLottieXCFramework/: CMakeLists.txt  build.sh
Tools/frameworks/openssl/: build.sh
Tools/frameworks/tonlib/: build.sh
Tools/frameworks/tonlib/Templates/: Info.plist
